@@ -4,6 +4,7 @@ Revision history for Apache::AuthCookie
    - enable Dist::Zilla Manifest plugin
    - add FAQ
    - add FAQ entry on how to protect an entire site/document root
+   - recognize_user: return DECLINED if user is already set
 
 3.14  2010-04-12
    - MP2: doc updates: remove beta warnings, change Apache::AuthCookie to
